--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,12 +41,12 @@ import Button from "../components/Button.astro";
 
   <section class="relative my-20 overflow-hidden">
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0">
-    <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-5 col-span-4 text-center">What is it? </Heading>
+    <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-5 col-span-4 text-center fadeup3">What is it? </Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-4 col-span-6 -mt-4 lg:-mt-10 fadeinleft1">What is</Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-3 col-span-6 -mt-4 lg:-mt-10 fadeinright1">Instant</Heading>
     <Heading htmlheading="h2" size="medium" font="h2" stylingclasses="col-start-7 col-span-4 -mt-4 lg:-mt-10 fadeinleft2">Day?</Heading>
     <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-2">Sooo....</Heading>
-    <Text teksttype="Light" stylingclasses="col-start-3 col-span-8">October 18 is Instant Day - a day all about celebrating instant photography. So get out your Polaroid, Instax or whatever instant photography camera you are using, and show us your instants. Instant Day isn’t really a photo competition, it’s more a homage to good old analogue, instant photography - everybody who participates are winners:-) But: We do have a nice prize for one lucky instant photographer!</Text>
+    <Text teksttype="Light" stylingclasses="col-start-3 col-span-8 fadeinleft6">October 18 is Instant Day - a day all about celebrating instant photography. So get out your Polaroid, Instax or whatever instant photography camera you are using, and show us your instants. Instant Day isn’t really a photo competition, it’s more a homage to good old analogue, instant photography - everybody who participates are winners:-) But: We do have a nice prize for one lucky instant photographer!</Text>
     </div>
     <!-- knap der linker til google calender -->
     <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Instant+Day&dates=20251018/20251019&details=Kom+og+vær+med!&location=København" 
@@ -65,10 +65,10 @@ import Button from "../components/Button.astro";
     <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 py-20">
       <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-3 col-span-7 fadeup1">Share your</Heading>
       <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-6 col-span-6 -mt-6 fadeinright2">instants!</Heading>
-      <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-5 mt-10">How to participate? </Heading>
-      <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 pt-2 pb-7">So: Got an instant photo ready for the public? In order to take part in Instant Day: </Text>
+      <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-3 col-span-5 mt-10 fadeinleft4">How to participate? </Heading>
+      <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 pt-2 pb-7 fadeinright4">So: Got an instant photo ready for the public? In order to take part in Instant Day: </Text>
       <Text teksttype="Light" stylingclasses="col-start-3 col-span-9 py-3">
-      <ol class="list-decimal list-inside space-y-2">
+      <ol class="list-decimal list-inside space-y-2 fadeinleft5">
         <li>Take a photo of your instant with your smartphone (or scan it for max. quality) - the file should be between 2 - 10 MB, in jpg/jpeg or webp format.</li>
         <li>Upload your photo and credentials on [link til din “share your instants” side]</li>
         <li>Agree to our terms and conditions [link til din “terms and conditions” sektion på “share your instants” siden]...</li>
@@ -82,7 +82,7 @@ import Button from "../components/Button.astro";
   <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 pb-10">
   <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-2 col-span-6 -mt-4 lg:-mt-10 fadeinleft3">Need some</Heading>
   <Heading htmlheading="h3" size="small_light" font="h3_light" stylingclasses="col-start-5 col-span-7 -mt-4 lg:-mt-10 fadeinright3">inspiration?</Heading>
-  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-9 col-span-4 -mt-2 lg:-mt-6">from others</Heading>
+  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-9 col-span-4 -mt-2 lg:-mt-6 fadeinleft7">from others</Heading>
   </div>
  <!-- Første scroll-galleri (venstre -> højre) -->
  <div class="overflow-x-auto">
@@ -117,7 +117,7 @@ import Button from "../components/Button.astro";
 <section class="bg-[url(/images/ready_t_upload_bg.png)] bg-cover">
   <div class="mx-auto max-w-screen-lg px-4 grid grid-cols-12 gap-y-0 pt-20 ">
     <Heading htmlheading="h3" size="small_dark" font="h3_dark" stylingclasses="col-start-2 col-span-10 text-center fadeup2">Ready to upload?</Heading>
-        <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-7 col-span-7 -mt-2 lg:-mt-5">Fill out the form below...</Heading>
+        <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-7 col-span-7 -mt-2 lg:-mt-5 fadeinright5">Fill out the form below...</Heading>
   </div>
 <div class="pb-10 lg:pb-20">
   <form 
@@ -232,7 +232,7 @@ import Button from "../components/Button.astro";
     class="col-start-1 col-span-7 w-full max-w-full h-auto filter grayscale hover:grayscale-0 transition duration-300 hover:scale-110"
   >
   
-  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-9 col-span-4">
+  <Heading htmlheading="h4" size="xsmall" font="h4" stylingclasses="col-start-9 col-span-4 fadeinright8">
     “I love Polaroids because each photo becomes a keepsake — a memory you can touch and relive.”
     -Sarah
   </Heading>
@@ -315,5 +315,35 @@ import Button from "../components/Button.astro";
   inView( ".fadeinleft4" , () =>{
 	animate( ".fadeinleft4", { x: [-2000, 0 ] }, { duration: 1.5})
 	})
+
+  inView( ".fadeinright4" , () =>{
+	animate( ".fadeinright4", { x: [2000, 0 ] }, { duration: 1.5})
+	})
+
+  inView( ".fadeinleft5" , () =>{
+	animate( ".fadeinleft5", { x: [-2000, 0 ] }, { duration: 1.5})
+	})
+
+  inView( ".fadeup3" , () =>{
+	animate( ".fadeup3", { y: [2000, 0 ] }, { duration: 1.5})
+	})
+  
+   inView( ".fadeinleft6" , () =>{
+	animate( ".fadeinleft6", { x: [-2000, 0 ] }, { duration: 1.5})
+	})
+
+  inView( ".fadeinleft7" , () =>{
+	animate( ".fadeinleft7", { x: [-2000, 0 ] }, { duration: 1.5})
+	})
+
+   inView( ".fadeinright5" , () =>{
+	animate( ".fadeinright5", { x: [2000, 0 ] }, { duration: 1.5})
+	})
+
+   inView( ".fadeinright8" , () =>{
+	animate( ".fadeinright8", { x: [2000, 0 ] }, { duration: 1.5})
+	})
+
+
 
 </script> 
