--- a/src/pages/why.astro
+++ b/src/pages/why.astro
@@ -4,7 +4,7 @@ import Heading from "../components/Heading.astro";
 import Text from "../components/Text.astro";
 ---
 
-<MainLayout title="Titel">
+<MainLayout title="Why">
   <!-- Noise overlay -->
   <div
     class="pointer-events-none fixed inset-0 z-[9999] mix-blend-multiply opacity-100"
